mdapipkg/objects/M2MX_Skillsets__c.object
<CustomObject>
    <fields>
        <fullName>Category_Text__c</fullName>
        <label>Category(Text)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Category Comments</fullName>
                </value>
                <value>
                    <fullName>Adolescents and Children</fullName>
                </value>
                <value>
                    <fullName>Aviation</fullName>
                </value>
                <value>
                    <fullName>FINANCE</fullName>
                </value>
                <value>
                    <fullName>Geography</fullName>
                </value>
                <value>
                    <fullName>Global Issues</fullName>
                </value>
                <value>
                    <fullName>Golf Courses</fullName>
                </value>
                <value>
                    <fullName>Government Agencies</fullName>
                </value>
                <value>
                    <fullName>Government Agencies - Consulate/Embassy</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Human Resource Management</fullName>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>Legal: Business</fullName>
                </value>
                <value>
                    <fullName>Legal: Personal</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Manufacturing and Distribution</fullName>
                </value>
                <value>
                    <fullName>Ownership</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Political</fullName>
                </value>
                <value>
                    <fullName>Presidents&apos; Action Net - Social Enterprise</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Recreation and Leisure</fullName>
                </value>
                <value>
                    <fullName>Regional Topics</fullName>
                </value>
                <value>
                    <fullName>Sales and Marketing</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Social Enterprise Expertise Countries</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Tennis Clubs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>M2MX Skillsets</relationshipLabel>
        <relationshipName>Skills_Interests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <label>Expertise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Georgraphy__c</fullName>
        <label>Georgraphy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Golf__c</fullName>
        <label>Golf</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Social_Enterprise__c</fullName>
        <label>Social Enterprise</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Category_Text__c</fullName>
        <label>Sub-Category(Text)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Addiction</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Aircraft Type</fullName>
                </value>
                <value>
                    <fullName>Asset Management</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Australia and the South Pacific</fullName>
                </value>
                <value>
                    <fullName>Auto Immune Disease</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Blood Disorder</fullName>
                </value>
                <value>
                    <fullName>Board of Directors</fullName>
                </value>
                <value>
                    <fullName>Business Planning</fullName>
                </value>
                <value>
                    <fullName>Camp</fullName>
                </value>
                <value>
                    <fullName>Cancer</fullName>
                </value>
                <value>
                    <fullName>Cardiac</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Corporate Development</fullName>
                </value>
                <value>
                    <fullName>Cosmetic Treatment</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Criminal Activity</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery</fullName>
                </value>
                <value>
                    <fullName>Discrimination</fullName>
                </value>
                <value>
                    <fullName>Dismissal</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tennis__c</fullName>
        <label>Tennis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <label>M2MX Skillsets</label>
    <nameField>
        <displayFormat>M2MX-{0000}</displayFormat>
        <label>M2MX Skillsets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>M2MX Skillsets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>